# patchpal

./: Cargo.toml  README.md  build.rs
src/: args.rs  client.rs  lib.rs  main.rs  models.rs  patch.proto  server.rs  tui.rs
