[package]
name = "patchpal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
crossterm = { version = "0.28.1", features = ["event-stream"] }
log = "0.4.26"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
tokio-tungstenite = "0.26.2"
futures-util = { version = "0.3.28", default-features = false, features = [
	"sink",
	"std",
] }
tokio = { version = "1.27.0", default-features = false, features = [
	"io-std",
	"macros",
	"net",
	"rt-multi-thread",
	"time",
	"sync",
	"signal",
] }
futures-channel = "0.3.31"
prost = "0.13.5"
cli-log = "2.1.0"
indoc = "2.0.6"
tokio-util = "0.7.14"
git2 = "0.20.0"
stderrlog = "0.6.0"
tui-scrollview = "0.5.1"
unidiff = "0.3.3"

[build-dependencies]
prost-build = "0.13.0"
